auteração-seleção-duas-moedas

--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
 
         <aside>
             <section>
-                <img src="./assets/brasil 2.png" alt="logo-moeda-a-converter">
-                <p class="moeda">Real</p>
+                <img id="img-currency1" src="./assets/brasil 2.png" alt="logo-moeda-a-converter">
+                <p class="moeda" id="nome-moeda-a-converter">Real</p>
                 <p class="moeda-valor-entrada">R$ 00,00</p>
             </section>
         
         <img id="arrow" src="./assets/Vector.png" alt="seta">
 
             <section>
-                <img class="img-currency" src="./assets/dolar.png" alt="logo-moeda-convertida">
+                <img id="img-currency" src="./assets/dolar.png" alt="logo-moeda-convertida">
                 <p class="moeda" id="nome-moeda-convertida">Dólar</p>
                 <p class="moeda-valor-convertida">US$ 00,00</p>
             </section>
